# mutable-hashmap

./: cabal.project  mutable-hashmap.cabal  output.html
bench/: IsMap.hs  Main.hs  MapFunctions.hs
include/: mutable-hashmap.h
src/Data/HashMap/: Mutable.hs
src/Data/HashMap/Frozen/: Generic.hs
src/Data/HashMap/Mutable/: Boxed.hs  Generic.hs  Internal.hs  Prim.hs  Unlifted.hs
src/Data/HashMap/Mutable/Boxed/: Small.hs
src/Data/HashMap/Mutable/Internal/: Arena.hs  Array.hs  Basic.hs  Generic.hs  PrimArray.hs  Primes.hs  Robin.hs  Template.hs  Utils.hs
test/: GenerateHelper.hs  GenerateSpec.hs
test/Data/HashMap/: MutableSpec.hs
